# cli

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: cli-checks.yaml  publish-to-pypi.yaml
cli/: api.py  bucket.py  commons.py  endpoint.py  exceptions.py  main.py  user.py  webhook.py
docs/: cli.md  sdk.md
scripts/: asciinema-config  doitlive-session.sh
src/adacord/: __init__.py
src/adacord/cli/: api.py  api_tokens.py  auth.py  bucket.py  commons.py  data.py  exceptions.py  main.py  user.py
src/cli/: api.py  bucket.py  endpoint.py  exceptions.py  main.py  user.py
src/tests/: conftest.py  test_api.py  test_commons.py
tests/: test_api.py  test_commons.py
