[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Christian Barra <me@christianbarra.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
requests = "^2.26.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
flake8 = "^3.9.2"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
adacord = "cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
